# lsystems

./: .gitignore  CONTRIBUTING.md  LICENCE.md  README.md  env.yml  pyproject.toml  setup.py
.github/workflows/: python-package-conda.yml  python-package-poetry.yml
lsystems/: curves.py  lsystem.py  newton.py  plotting.py  svg.py  test_svg.py  turtle.py
notebooks/: draw_curves.ipynb  random_curves.ipynb
src/: curves.py  lsystem.py  my_turtle.py  my_turtle_test.py
test/: test_curves.py  test_lsystem.py  test_newton.py  test_svg.py  test_turtle.py
